Opened 14 years ago
Closed 12 years ago
#968 closed defect (fixed)
Error message at end of asf stream
| Reported by: | Yossi | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | undetermined |
| Version: | git-master | Keywords: | asf wmav2 |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
This ticket continues https://ffmpeg.org/trac/ffmpeg/ticket/588 which was fixed but now when i'm running fmpeg on the full sized video (not only the first 10MB sample), it crashes around frame 1989 with message: get_buffer() failed
I am using the static 64-bit Build from zeranoe @ 2012-01-27 (http://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-git-01fcbdf-win64-static.7z).
You can reproduce the problem by running ffmpeg directly on the video file as it's stored on our web site, i.e.:
ffmpeg.exe -i http://media.webcollage.net/rwvfp/wc/cp/3493374/module/instantupdatetest/_cp/products/1318977439061/tab-da6bd996-030a-4d8d-b4a7-105c57117116/resource-3c1aaa56-90fd-4fb5-9383-e0606761a4ca.wmv -y bad-video.wmv
Change History (7)
comment:1 by , 14 years ago
| Keywords: | win64 added |
|---|
comment:3 by , 14 years ago
| Keywords: | asf wmav2 added; win64 removed |
|---|---|
| Priority: | normal → minor |
| Reproduced by developer: | set |
| Status: | new → open |
| Summary: | FFmpeg crashes when transcoding a wmv video on windows 7 (64 bit) machine → Error message at end of asf stream |
| Version: | unspecified → git-master |
$ ffmpeg -i resource-3c1aaa56-90fd-4fb5-9383-e0606761a4ca.wmv -vn -f null -
ffmpeg version N-39496-ga4e359a Copyright (c) 2000-2012 the FFmpeg developers
built on Apr 4 2012 10:59:20 with gcc 4.5.3
configuration: --cc=/usr/local/gcc-4.5.3/bin/gcc --enable-gpl
libavutil 51. 44.100 / 51. 44.100
libavcodec 54. 12.100 / 54. 12.100
libavformat 54. 3.100 / 54. 3.100
libavdevice 53. 4.100 / 53. 4.100
libavfilter 2. 66.101 / 2. 66.101
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 10.100 / 0. 10.100
libpostproc 52. 0.100 / 52. 0.100
Input #0, asf, from 'resource-3c1aaa56-90fd-4fb5-9383-e0606761a4ca.wmv':
Metadata:
WMFSDKVersion : 11.0.5721.5245
WMFSDKNeeded : 0.0.0.0000
IsVBR : 1
VBR Peak : 846
Buffer Average : 851
Encoded_By : Sorenson Squeeze
Encoded_With : Sorenson Squeeze
Duration: 00:01:20.02, start: 0.000000, bitrate: 5018 kb/s
Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 48000 Hz, 2 channels, s16, 128 kb/s
Stream #0:1: Video: wmv2 (WMV2 / 0x32564D57), yuv420p, 1280x720, 18000 kb/s, 25 tbr, 1k tbn, 1k tbc
Output #0, null, to 'pipe:':
Metadata:
WMFSDKVersion : 11.0.5721.5245
WMFSDKNeeded : 0.0.0.0000
IsVBR : 1
VBR Peak : 846
Buffer Average : 851
Encoded_By : Sorenson Squeeze
Encoded_With : Sorenson Squeeze
encoder : Lavf54.3.100
Stream #0:0: Audio: pcm_s16le, 48000 Hz, 2 channels, s16, 1536 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (wmav2 -> pcm_s16le)
Press [q] to stop, [?] for help
[wmav2 @ 0x147d1e0] get_buffer() failed
Error while decoding stream #0:0
size= 0kB time=00:01:20.01 bitrate= 0.0kbits/s
video:0kB audio:15008kB global headers:0kB muxing overhead -100.000000%
follow-up: 6 comment:4 by , 13 years ago
Is there something that plays more of this file or better ?
Or is the problem just that an error message is shown ?
comment:5 by , 13 years ago
The only problem I see is that instead of finishing silently (as done with other samples) both ffmpeg and ffplay show an error on exit which is unexpected (assuming this is a valid file).
$ ffmpeg -i resource-3c1aaa56-90fd-4fb5-9383-e0606761a4ca.wmv out.wav
ffmpeg version N-50450-g6c6dc8c Copyright (c) 2000-2013 the FFmpeg developers
built on Mar 3 2013 17:41:34 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl --disable-indev=jack
libavutil 52. 17.103 / 52. 17.103
libavcodec 54. 92.100 / 54. 92.100
libavformat 54. 63.102 / 54. 63.102
libavdevice 54. 3.103 / 54. 3.103
libavfilter 3. 41.100 / 3. 41.100
libswscale 2. 2.100 / 2. 2.100
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 2.100 / 52. 2.100
Guessed Channel Layout for Input Stream #0.0 : stereo
Input #0, asf, from 'resource-3c1aaa56-90fd-4fb5-9383-e0606761a4ca.wmv':
Metadata:
WMFSDKNeeded : 0.0.0.0000
DeviceConformanceTemplate: @
WMFSDKVersion : 11.0.5721.5245
IsVBR : 1
VBR Peak : 846
Buffer Average : 851
Encoded_By : Sorenson Squeeze
Encoded_With : Sorenson Squeeze
Duration: 00:01:20.02, start: 0.000000, bitrate: 5018 kb/s
Stream #0:0: Audio: wmav2 (a[1][0][0] / 0x0161), 48000 Hz, stereo, fltp, 128 kb/s
Stream #0:1: Video: wmv2 (WMV2 / 0x32564D57), yuv420p, 1280x720, 18000 kb/s, 25 tbr, 1k tbn, 1k tbc
Output #0, wav, to 'out.wav':
Metadata:
WMFSDKNeeded : 0.0.0.0000
DeviceConformanceTemplate: @
WMFSDKVersion : 11.0.5721.5245
IsVBR : 1
VBR Peak : 846
Buffer Average : 851
ITCH : Sorenson Squeeze
Encoded_With : Sorenson Squeeze
ISFT : Lavf54.63.102
Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s
Stream mapping:
Stream #0:0 -> #0:0 (wmav2 -> pcm_s16le)
Press [q] to stop, [?] for help
[wmav2 @ 0x2ab45c0] nb_frames is 0
Error while decoding stream #0:0: Invalid data found when processing input
size= 15008kB time=00:01:20.01 bitrate=1536.5kbits/s
video:0kB audio:15008kB subtitle:0 global headers:0kB muxing overhead 0.000690%
comment:6 by , 13 years ago
Replying to michael:
Is there something that plays more of this file or better ?
Or is the problem just that an error message is shown ?
I just downloaded a newer build of ffmpeg of http://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-20130302-git-4f0d4ac-win64-static.7z and retried it: it seems like the movie is transcoded to the end (or at least very very close to it) and the resulting movie is playable, however ffmpeg finishes the transcoding with the following output to the console:
which is causing problems to our software that runs ffmpeg since it scans the stdout for errors and finds one.
BTW, playing the original movie with VLC v2.0.4
comment:7 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



Please add backtrace etc. as explained on http://ffmpeg.org/bugreports.html