wmadec: check nb_frames

Improves error message for Ticket968

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>